--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="toolbox.css"/>
+      <link rel="stylesheet" href="index.css"/>
       <title>toolbox Extension 2021 (v0.01)</title>
     </head>
     <body>
@@ -32,7 +32,23 @@
             <!-- cards -->
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_gitpatobeur.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_gitpatobeur.png" alt="Page toolbox" class="fig">
+              </figure>
+              <div class="content">
+                <div class="front">
+                  <p class="title">Ouvrez about:debugging afin de charger un module complémentaire temporaire…</p>
+                </div>
+                <div class="back">
+                  <p>
+                    Tapez <span>about:debugging</span> dans l'adresse de votre navigateur pour Ouvrir la page de debugging.<br/>
+                    Cliquez sur [Ce Firefox] puis sur<br/>
+                    [Charger un module complémentaire temporaire] : </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <figure class="figure">
+                <img src="img/vig/vig_gitpatobeur.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -46,7 +62,7 @@
             </div>
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_lilo.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_lilo.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -59,7 +75,7 @@
             </div>
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_trello.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_trello.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -72,7 +88,7 @@
             </div>
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_mozhack.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_mozhack.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -86,7 +102,7 @@
             </div>
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_mozhack.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_mozhack.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -101,7 +117,7 @@
             
             <div class="card">
               <figure class="figure">
-                <img src="img/vig_rootme.png" alt="Page toolbox" class="fig">
+                <img src="img/vig/vig_rootme.png" alt="Page toolbox" class="fig">
               </figure>
               <div class="content">
                 <div class="front">
@@ -138,7 +154,7 @@
                   <p>Documentation en anglais : <a title="mozilla us" href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions"> developer.mozilla.org </a></p>
               </div>
               <figure class="figure">
-                <img src="img/vig_toolbox.svg" alt="logo toolbox" class="brand-logo">
+                <img src="img/vig/vig_toolbox.svg" alt="logo toolbox" class="brand-logo">
               </figure>
             </div>
 
@@ -149,7 +165,7 @@
                   <p>Documentation en anglais : <a title="mozilla us" href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions"> developer.mozilla.org </a></p>
               </div>
               <figure class="figure">
-                <img src="img/vig_mozhack.png" alt="logo mozillahacks" class="fig">
+                <img src="img/vig/vig_mozhack.png" alt="logo mozillahacks" class="fig">
               </figure>
             </div>
             
